--- a/src/app/pages/devices/card/card.component.html
+++ b/src/app/pages/devices/card/card.component.html
@@ -16,8 +16,7 @@
     </div>
 
     <h5 style="margin-top: 35px;">PORTS</h5>
-    <i *ngIf="portsRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
-    <ul *ngIf="portsRequest === 'success'" style="padding-left: 25px;">
+    <ul style="padding-left: 25px;">
         <li *ngFor="let port of card.ports">
             <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'port', port.id]">{{ port.name }}</a>
         </li>
@@ -25,11 +24,15 @@
 
     <h5 style="margin-top: 35px;">ATTRIBUTES</h5>
     <div class="details">
-        <p *ngFor="let attribute of attributes">
+        <p *ngFor="let attribute of attributes" class="attribute">
             {{ attribute.key }}:
-            <span class="field-value"
-                ><span appCodeCopy>{{ attribute.value }}</span></span
-            >
+            <span class="field-value">
+                <span appCodeCopy>{{ attribute.value }}</span>
+            </span>
+
+            <button class="edit" nz-button nzType="link" nzShape="circle" (click)="editProperty(attribute.key, attribute.value)">
+                <i nz-icon nzType="edit" style="font-size: 14px;"></i>
+            </button>
         </p>
     </div>
 </div>
