--- a/src/app/pages/devices/cpe/cpe.component.html
+++ b/src/app/pages/devices/cpe/cpe.component.html
@@ -16,22 +16,25 @@
     </div>
 
     <h5 style="margin-top: 35px;">CPE PORTS</h5>
-    <i *ngIf="cpePortsRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
-    <ul *ngIf="cpePortsRequest === 'success'" style="padding-left: 25px;">
-        <li *ngFor="let cpePort of cpePorts">
-            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'cpe-port', cpePort.id]"
-                >CPE Port {{ cpePort.id }}</a
-            >
+    <ul style="padding-left: 25px;">
+        <li *ngFor="let cpePort of cpe.cpe_ports">
+            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'cpe-port', cpePort.id]">{{
+                cpePort.name
+            }}</a>
         </li>
     </ul>
 
     <h5 style="margin-top: 35px;">ATTRIBUTES</h5>
     <div class="details">
-        <p *ngFor="let attribute of attributes">
+        <p *ngFor="let attribute of attributes" class="attribute">
             {{ attribute.key }}:
-            <span class="field-value"
-                ><span appCodeCopy>{{ attribute.value }}</span></span
-            >
+            <span class="field-value">
+                <span appCodeCopy>{{ attribute.value }}</span>
+            </span>
+
+            <button class="edit" nz-button nzType="link" nzShape="circle" (click)="editProperty(attribute.key, attribute.value)">
+                <i nz-icon nzType="edit" style="font-size: 14px;"></i>
+            </button>
         </p>
     </div>
 </div>
