--- a/src/app/pages/devices/ont-port/ont-port.component.html
+++ b/src/app/pages/devices/ont-port/ont-port.component.html
@@ -16,20 +16,23 @@
     </div>
 
     <h5 style="margin-top: 35px;">CPES</h5>
-    <i *ngIf="cpesRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
-    <ul *ngIf="cpesRequest === 'success'" style="padding-left: 25px;">
-        <li *ngFor="let cpe of cpes">
-            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'cpe', cpe.id]">CPE {{ cpe.id }}</a>
+    <ul style="padding-left: 25px;">
+        <li *ngFor="let cpe of ontPort.cpes">
+            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'cpe', cpe.id]">{{ cpe.name }}</a>
         </li>
     </ul>
 
     <h5 style="margin-top: 35px;">ATTRIBUTES</h5>
     <div class="details">
-        <p *ngFor="let attribute of attributes">
+        <p *ngFor="let attribute of attributes" class="attribute">
             {{ attribute.key }}:
-            <span class="field-value"
-                ><span appCodeCopy>{{ attribute.value }}</span></span
-            >
+            <span class="field-value">
+                <span appCodeCopy>{{ attribute.value }}</span>
+            </span>
+
+            <button class="edit" nz-button nzType="link" nzShape="circle" (click)="editProperty(attribute.key, attribute.value)">
+                <i nz-icon nzType="edit" style="font-size: 14px;"></i>
+            </button>
         </p>
     </div>
 </div>
