--- a/src/app/pages/devices/port-profile-connection/port-profile-connection.component.html
+++ b/src/app/pages/devices/port-profile-connection/port-profile-connection.component.html
@@ -13,11 +13,15 @@
 
     <h5 style="margin-top: 35px;">ATTRIBUTES</h5>
     <div class="details">
-        <p *ngFor="let attribute of attributes">
+        <p *ngFor="let attribute of attributes" class="attribute">
             {{ attribute.key }}:
             <span class="field-value">
                 <span appCodeCopy>{{ attribute.value }}</span>
             </span>
+
+            <button class="edit" nz-button nzType="link" nzShape="circle" (click)="editProperty(attribute.key, attribute.value)">
+                <i nz-icon nzType="edit" style="font-size: 14px;"></i>
+            </button>
         </p>
     </div>
 </div>
