--- a/src/app/pages/devices/port/port.component.css
+++ b/src/app/pages/devices/port/port.component.css
@@ -22,3 +22,16 @@ span.field-value::before,
 span.field-value::after {
     content: "`";
 }
+
+div.switches {
+    margin-top: 35px;
+}
+
+p.attribute > button.edit {
+    opacity: 0;
+    transition: all 0.25s ease;
+}
+
+p.attribute:hover > button.edit {
+    opacity: 1;
+}
