--- a/src/app/pages/devices/port/port.component.html
+++ b/src/app/pages/devices/port/port.component.html
@@ -15,21 +15,32 @@
         <app-port-visual [port]="port"></app-port-visual>
     </div>
 
+    <div class="switches">
+        <h5>ADMIN STATE</h5>
+        <nz-switch [(ngModel)]="admState" (click)="toggleAdmState()" [nzLoading]="admRequest === 'pending'"></nz-switch>
+
+        <h5 style="margin-top: 20px;">OPERATING STATE</h5>
+        <nz-switch [(ngModel)]="oprState" (click)="toggleOprState()" [nzLoading]="oprRequest === 'pending'"></nz-switch>
+    </div>
+
     <h5 style="margin-top: 35px;">ONTS</h5>
-    <i *ngIf="ontsRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
-    <ul *ngIf="ontsRequest === 'success'" style="padding-left: 25px;">
-        <li *ngFor="let ont of onts">
-            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'ont', ont.id]">ONT {{ ont.id }}</a>
+    <ul style="padding-left: 25px;">
+        <li *ngFor="let ont of port.onts">
+            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'ont', ont.id]">{{ ont.name }}</a>
         </li>
     </ul>
 
     <h5 style="margin-top: 35px;">ATTRIBUTES</h5>
     <div class="details">
-        <p *ngFor="let attribute of attributes">
+        <p *ngFor="let attribute of attributes" class="attribute">
             {{ attribute.key }}:
             <span class="field-value">
                 <span appCodeCopy>{{ attribute.value }}</span>
             </span>
+
+            <button class="edit" nz-button nzType="link" nzShape="circle" (click)="editProperty(attribute.key, attribute.value)">
+                <i nz-icon nzType="edit" style="font-size: 14px;"></i>
+            </button>
         </p>
     </div>
 </div>
