--- a/src/app/pages/devices/vlan/vlan.component.css
+++ b/src/app/pages/devices/vlan/vlan.component.css
@@ -22,3 +22,12 @@ span.field-value::before,
 span.field-value::after {
     content: "`";
 }
+
+p.attribute > button.edit {
+    opacity: 0;
+    transition: all 0.25s ease;
+}
+
+p.attribute:hover > button.edit {
+    opacity: 1;
+}
