--- a/src/app/pages/devices/vlan/vlan.component.html
+++ b/src/app/pages/devices/vlan/vlan.component.html
@@ -12,22 +12,25 @@
     </nz-affix>
 
     <h5 style="margin-top: 35px;">V-LAN CONNECTIONS</h5>
-    <i *ngIf="vlanConnectionsRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
-    <ul *ngIf="vlanConnectionsRequest === 'success'" style="padding-left: 25px;">
-        <li *ngFor="let vlanConnection of vlanConnections">
-            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'vlan-connection', vlanConnection.id]"
-                >V-Lan Connection {{ vlanConnection.id }}</a
-            >
+    <ul style="padding-left: 25px;">
+        <li *ngFor="let vlanConnection of vlan.vlan_connections">
+            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'vlan-connection', vlanConnection.id]">{{
+                vlanConnection.name
+            }}</a>
         </li>
     </ul>
 
     <h5 style="margin-top: 35px;">ATTRIBUTES</h5>
     <div class="details">
-        <p *ngFor="let attribute of attributes">
+        <p *ngFor="let attribute of attributes" class="attribute">
             {{ attribute.key }}:
-            <span class="field-value"
-                ><span appCodeCopy>{{ attribute.value }}</span></span
-            >
+            <span class="field-value">
+                <span appCodeCopy>{{ attribute.value }}</span>
+            </span>
+
+            <button class="edit" nz-button nzType="link" nzShape="circle" (click)="editProperty(attribute.key, attribute.value)">
+                <i nz-icon nzType="edit" style="font-size: 14px;"></i>
+            </button>
         </p>
     </div>
 </div>
