:sparkles: Updated CredentialsComponent

--- a/src/app/pages/credentials/credentials.component.css
+++ b/src/app/pages/credentials/credentials.component.css
@@ -1,12 +1,21 @@
-div.wrapper {
+div.full-size {
     width: 100%;
     height: 100vh;
+    position: relative;
+}
+
+div.full-size > div.form-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
-div.wrapper > div.form {
+div.full-size > div.form-wrapper > div.form {
     width: 300px;
     height: auto;
     box-sizing: border-box;
@@ -14,6 +23,6 @@ div.wrapper > div.form {
     border-radius: 10px;
 }
 
-div.wrapper > div.form input:nth-child(n + 2) {
+div.full-size > div.form-wrapper > div.form input:nth-child(n + 2) {
     margin-top: 10px;
 }
