--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -1,100 +1,120 @@
-<div class="wrapper" @stepAnimation>
-    <div class="form" *ngIf="step === 0">
-        <h1>Hey! 👋</h1>
+<div class="full-size">
+    <!-- Welcome Screen -->
+    <div class="form-wrapper" *ngIf="step === 0" @fadeInOut>
+        <div class="form">
+            <h1>Hey! 👋</h1>
 
-        <p style="margin-top: 0;">Welcome to Softboxes! Please provide some information below about your API Endpoint to get started!</p>
+            <p style="margin-top: 0;">
+                Welcome to the Softbox! Please provide some information below about your API Endpoint to get started!
+            </p>
 
-        <button nz-button nzType="primary" style="width: 100%; margin-top: 20px;" (click)="step = 1">Continue</button>
-    </div>
-
-    <div class="form" *ngIf="step === 1">
-        <h1 style="margin-bottom: 0;">API Information</h1>
-
-        <p>We need some information about your API set-up in order to request data and communicate with the softboxes.</p>
-
-        <div style="margin: 20px 0;">
-            <nz-select ngModel="lucy" style="width: 100%;" [(ngModel)]="credentialsForm.protocol">
-                <nz-option nzValue="https" nzLabel="HTTPS"></nz-option>
-                <nz-option nzValue="http" nzLabel="HTTP"></nz-option>
-            </nz-select>
-            <input nz-input placeholder="API Host" [(ngModel)]="credentialsForm.host" />
-            <input nz-input placeholder="Port" [(ngModel)]="credentialsForm.port" />
+            <button nz-button nzType="primary" style="width: 100%; margin-top: 20px;" (click)="step = 1">Continue</button>
         </div>
-
-        <button nz-button style="width: 100%;" nzType="primary" (click)="step = 2">Continue</button>
-        <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 0">Back</button>
     </div>
 
-    <div class="form" *ngIf="step === 2">
-        <h1 style="margin-bottom: 0;">API Authorization</h1>
+    <!-- API Host and Port -->
+    <div class="form-wrapper" *ngIf="step === 1" @fadeInOut>
+        <div class="form">
+            <h1 style="margin-bottom: 0;">API Information</h1>
 
-        <p>
-            Have you set up any layer of authorization for your API Endpoint? If so, you can specify the credentials below.
-        </p>
+            <p>We need some information about your API set-up in order to request data and communicate with the softboxes.</p>
 
-        <div style="margin: 20px 0;">
-            <label nz-checkbox [(ngModel)]="credentialsForm.auth.enabled">Authorization enabled</label>
-
-            <div *ngIf="credentialsForm.auth.enabled">
-                <nz-select ngModel="lucy" style="width: 100%; margin-top: 20px;" [(ngModel)]="credentialsForm.auth.type">
-                    <nz-option nzValue="basic" nzLabel="Basic Authorization"></nz-option>
-                    <nz-option nzValue="header" nzLabel="Custom Header"></nz-option>
+            <div style="margin: 20px 0;">
+                <nz-select ngModel="lucy" style="width: 100%;" [(ngModel)]="credentialsForm.protocol">
+                    <nz-option nzValue="https" nzLabel="HTTPS"></nz-option>
+                    <nz-option nzValue="http" nzLabel="HTTP"></nz-option>
                 </nz-select>
-
-                <input nz-input placeholder="Username" [(ngModel)]="credentialsForm.auth.username" />
-
-                <nz-input-group [nzSuffix]="suffixTemplate" style="margin-top: 10px;">
-                    <input
-                        [type]="passwordVisible ? 'text' : 'password'"
-                        nz-input
-                        placeholder="Password"
-                        [(ngModel)]="credentialsForm.auth.password"
-                    />
-                </nz-input-group>
-                <ng-template #suffixTemplate>
-                    <i
-                        nz-icon
-                        style="cursor: pointer;"
-                        [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
-                        (click)="passwordVisible = !passwordVisible"
-                    ></i>
-                </ng-template>
+                <input nz-input placeholder="API Host" [(ngModel)]="credentialsForm.host" />
+                <input nz-input placeholder="Port" [(ngModel)]="credentialsForm.port" />
             </div>
+
+            <button nz-button style="width: 100%;" nzType="primary" (click)="step = 2">Continue</button>
+            <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 0">Back</button>
         </div>
-
-        <button nz-button style="width: 100%;" nzType="primary" (click)="checkCredentials()">Check Connection</button>
-        <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 1">Back</button>
     </div>
 
-    <div class="form" *ngIf="checkRequest === 'pending'">
-        <img style="margin-bottom: 25px;" src="assets/images/api-pending.svg" />
+    <!-- Optional Authorization -->
+    <div class="form-wrapper" *ngIf="step === 2" @fadeInOut>
+        <div class="form">
+            <h1 style="margin-bottom: 0;">API Authorization</h1>
 
-        <h1 style="margin-bottom: 0;">Checking...</h1>
+            <p>
+                Have you set up any layer of authorization for your API Endpoint? If so, you can specify the credentials below.
+            </p>
 
-        <p>
-            Just a second, we're checking the information you provided.
-        </p>
+            <div style="margin: 20px 0;">
+                <label nz-checkbox [(ngModel)]="credentialsForm.auth.enabled">Authorization enabled</label>
+
+                <div *ngIf="credentialsForm.auth.enabled">
+                    <nz-select ngModel="lucy" style="width: 100%; margin-top: 20px;" [(ngModel)]="credentialsForm.auth.type">
+                        <nz-option nzValue="basic" nzLabel="Basic Authorization"></nz-option>
+                        <nz-option nzValue="header" nzLabel="Custom Header"></nz-option>
+                    </nz-select>
+
+                    <input nz-input placeholder="Username" [(ngModel)]="credentialsForm.auth.username" />
+
+                    <nz-input-group [nzSuffix]="suffixTemplate" style="margin-top: 10px;">
+                        <input
+                            [type]="passwordVisible ? 'text' : 'password'"
+                            nz-input
+                            placeholder="Password"
+                            [(ngModel)]="credentialsForm.auth.password"
+                        />
+                    </nz-input-group>
+                    <ng-template #suffixTemplate>
+                        <i
+                            nz-icon
+                            style="cursor: pointer;"
+                            [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
+                            (click)="passwordVisible = !passwordVisible"
+                        ></i>
+                    </ng-template>
+                </div>
+            </div>
+
+            <button nz-button style="width: 100%;" nzType="primary" (click)="checkCredentials()">Check Connection</button>
+            <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 1">Back</button>
+        </div>
     </div>
 
-    <div class="form" *ngIf="checkRequest === 'success'">
-        <img style="margin-bottom: 25px;" src="assets/images/api-success.svg" />
+    <!-- Check Pending -->
+    <div class="form-wrapper" *ngIf="checkRequest === 'pending'" @fadeInOut>
+        <div class="form">
+            <img style="margin-bottom: 25px;" src="assets/images/api-pending.svg" />
 
-        <h1 style="margin-bottom: 0;">Success!</h1>
+            <h1 style="margin-bottom: 0;">Checking...</h1>
 
-        <p>
-            Request successful! You will be redirected soon.
-        </p>
+            <p>
+                Just a second, we're checking the information you provided.
+            </p>
+        </div>
     </div>
 
-    <div class="form" *ngIf="checkRequest === 'error'">
-        <img style="margin-bottom: 25px;" src="assets/images/api-error.svg" />
+    <!-- Check Successful -->
+    <div class="form-wrapper" *ngIf="checkRequest === 'success'" @fadeInOut>
+        <div class="form">
+            <img style="margin-bottom: 25px;" src="assets/images/api-success.svg" />
 
-        <h1 style="margin-bottom: 0;">Uh-Oh...</h1>
+            <h1 style="margin-bottom: 0;">Success!</h1>
 
-        <p>
-            Something doesn't seem right with your provided information. Please re-check your information or your API server.
-        </p>
+            <p>
+                Request successful! You will be redirected soon.
+            </p>
+        </div>
+    </div>
 
-        <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 1; checkRequest = 'idle'">Try Again</button>
+    <!-- Check Failed -->
+    <div class="form-wrapper" *ngIf="checkRequest === 'error'" @fadeInOut>
+        <div class="form">
+            <img style="margin-bottom: 25px;" src="assets/images/api-error.svg" />
+
+            <h1 style="margin-bottom: 0;">Uh-Oh...</h1>
+
+            <p>
+                Something doesn't seem right with your provided information. Please re-check your information or your API server.
+            </p>
+
+            <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 1; checkRequest = 'idle'">Try Again</button>
+        </div>
     </div>
 </div>
