--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div class="settings">
-    <h1>Softboxes</h1>
+    <h1>Softbox</h1>
 
     <h3>About</h3>
     <p>Build Version: {{ build.version }}</p>
