🚧 Disabled Terminal page :(

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,12 +15,12 @@
             <li nz-menu-item routerLink="devices" [nzMatchRouter]="true">
                 Devices
             </li>
-            <li nz-menu-item routerLink="terminal" [nzMatchRouter]="true">
+            <li nz-menu-item routerLink="terminal" [nzMatchRouter]="true" nzDisabled>
                 Terminal
             </li>
-            <li nz-menu-item routerLink="templates" [nzMatchRouter]="true">
+            <!-- <li nz-menu-item routerLink="templates" [nzMatchRouter]="true">
                 Templates
-            </li>
+            </li> -->
 
             <li class="avatar" nz-menu-item routerLink="settings" [nzMatchRouter]="true">
                 <nz-badge [nzCount]="0">
