--- a/src/app/core/components/port-visual/port-visual.component.html
+++ b/src/app/core/components/port-visual/port-visual.component.html
@@ -2,8 +2,8 @@
     *ngIf="port"
     class="port"
     [src]="
-        port.adm_state === 'up'
-            ? port.opr_state === 'up'
+        port.admin_state === 'up'
+            ? port.operational_state === 'up'
                 ? 'assets/images/port_opr.svg'
                 : 'assets/images/port_adm.svg'
             : 'assets/images/port.svg'
