--- a/src/app/pages/devices/device-list/device-list.component.html
+++ b/src/app/pages/devices/device-list/device-list.component.html
@@ -1,5 +1,12 @@
 <div class="devices">
-    <div class="device" *ngFor="let device of api.devices" (click)="router.navigate(['/devices', device.id])">
+    <div
+        class="device"
+        *ngFor="let device of api.devices"
+        (click)="router.navigate(['/devices', device.id])"
+        nz-popover
+        [nzPopoverTitle]="device.vendor + ' ' + device.model + ' ' + device.version"
+        [nzPopoverContent]="'UUID: ' + device.uuid"
+    >
         <div class="image-wrapper">
             <img src="assets/images/box.svg" />
         </div>
